<resources>
    <string name="app_name">binge</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="or">OR</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email (Login ID)</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="agreements">By creating account, \n you agree to our terms and conditions</string>
    <string name="my_cart">My Cart</string>
    <string name="wish_list">Wishlist</string>
    <string name="shop_page">Shop Page</string>
    <string name="my_account">My Account</string>
    <string name="categories">Categories</string>
    <string name="login_text">Login</string>
    <string name="app_id">952504131513072</string>
    <string name="title_activity_shop_page">ShopPage</string>
    <string name="follow">FOLLOW</string>
    <string name="binge">binge.</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="filter_products">Filter Products</string>
    <string name="colors">Colors</string>
    <string name="sizes">Size</string>
    <string name="size">Sizes</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="xxxl">XXXL</string>
    <string name="cancel">CANCEL</string>
    <string name="filter">FILTER</string>
    <string name="Price">Price</string>
    <string name="Unfollow">Unfollow</string>
    <string name="search_shops">Search shops</string>
    <string name="title_activity_wish_list">WishList</string>
    <string name="title_activity_product">Product</string>
    <string name="add_to_wishlist">ADD TO WISHLIST</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="telephone">Phone</string>
    <string name="post_code">Postcode</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="forgot_passwords">Forgot Password?</string>
    <string name="provide_email">Please provide yout email ID to reset your password.</string>
    <string name="not_available">Please select size</string>
    <string name="size_not_available">Size not available</string>
    <string name="_1">1</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="checkout">Checkout</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="_100">$00</string>
    <string name="incl_tax">(incl.tax)</string>
    <string name="search_products">Search product</string>
    <string name="continues">CONTINUE</string>
    <string name="please_deliver_ro_my_billing_address">Please deliver to my billing address</string>
    <string name="first_name">First Name</string>
    <string name="address_one">Address 1</string>
    <string name="address_two">Address 2</string>
    <string name="select_shipping_method">Select Shipping Method</string>
    <string name="complete_order">COMPLETE ORDER</string>
    <string name="Quantity">quantity</string>
    <string name="personal">Personal</string>
    <string name="billing">Billing</string>
    <string name="shipping">Shipping</string>
    <string name="complete">Complete</string>
    <string name="new_address">New Address</string>
    <string name="existing_address">Existing Address</string>
    <string name="quantity">Quantity</string>
    <string name="no_cart">No products is present in cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="phone_no">Phone Number</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="edit_address">Edit Address</string>
    <string name="address_line_one">Address Line 1</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="country">Country</string>
    <string name="setting">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="version">Version</string>
    <string name="send_us_feedback">Send us feedback</string>
    <string name="like_app">Liked our app?Share now:</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="type_your_feedback">Please type your feedback</string>
    <string name="send_now">Send Now</string>
    <string name="shops">Shops</string>
    <string name="product_search">Search Product</string>
    <string name="no_product_found">No prduct match your search</string>
    <string name="logintest">Login</string>
    <string name="bingetitle">binge.</string>
    <string name="menu">Menu</string>
    <string name="following">FOLLOWING</string>
    <string name="cart">Cart</string>
    <string name="no_wishlist">Nothing to show</string>
    <string name="select_shipping_cost">Select shipping cost</string>
    <string name="color_not_available">Color not available</string>
    <string name="select_size">Please select size</string>
    <string name="in_wishlist">In Wishlist</string>
    <string name="order_list">Order List</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_id">Order ID:</string>
    <string name="date_added">Date Added:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="shipping_method">Shipping Method:</string>
    <string name="order_details">Order Details</string>
    <string name="payment_address">Payment Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="product_name">Product Name:</string>
    <string name="model">Model</string>
    <string name="status">Status</string>
    <string name="notification">Notifications</string>
    <string name="no_shops_under_following">You have no shops under the following.</string>
    <string name="account">MY ACCOUNT</string>
    <string name="connect_with_us">CONNECT WITH US</string>
    <string name="like_on_facebook">Like us on Facebook</string>
    <string name="follow_us_on_instagram">Follow us on Instagram</string>
    <string name="back_store">BACK TO STORES</string>
    <string name="sub_total">SUB TOTAL</string>
    <string name="coupon">PROMO CODES</string>
    <string name="coupn_value">----</string>
    <string name="coupon_codes">Promo Codes</string>
    <string name="no_item_in_card">No item in card</string>
    <string name="search">Search</string>
    <string name="lets_search">LETS SWIPE</string>
    <string name="see_in_wishlist">SEE IN WISHLIST</string>
    <string name="view_in_cart">VIEW IN CART</string>
    <string name="product_details">Product Details</string>
    <string name="product_details_content">Prosuct details content is a textview used for holding the content.This can holad all the content and show detail of textview.If yout do not believe i will show you one day. Good Bye!</string>
    <string name="results">Results</string>
</resources>