<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="#ffffff"    android:layout_marginBottom="5dp"    android:layout_marginLeft="5dp"    android:layout_marginRight="5dp"    android:layout_marginTop="10dp"    android:orientation="vertical"    >    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="1"        android:background="#ffffff"        android:paddingBottom="5dp"        android:paddingLeft="5dp"        android:paddingRight="5dp"        android:paddingTop="5dp"        >        <ScrollView            android:layout_width="match_parent"            android:layout_height="wrap_content"            >            <LinearLayout                android:id="@+id/top_parent"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="vertical"                >                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="10dp"                    android:background="@drawable/rectangular_background"                    android:orientation="horizontal"                    >                    <RelativeLayout                        android:id="@+id/left_rectangular_background"                        android:layout_width="0dp"                        android:layout_height="100dp"                        android:layout_weight="1"                        >                        <ImageView                            android:id="@+id/existing"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_centerInParent="true"                            android:src="@mipmap/ic_existing"                            />                        <TextView                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:layout_below="@+id/existing"                            android:gravity="center"                            android:paddingTop="5dp"                            android:text="@string/existing_address"                            android:textSize="13sp"                            android:textStyle="bold"/>                    </RelativeLayout>                    <View                        android:layout_width="1.5dp"                        android:layout_height="match_parent"                        android:background="#f1f1f1"                        />                    <RelativeLayout                        android:id="@+id/right_rectangular_background"                        android:layout_width="0dp"                        android:layout_height="100dp"                        android:layout_weight="1"                        >                        <ImageView                            android:id="@+id/new_address"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_centerInParent="true"                            android:src="@mipmap/ic_new"                            />                        <TextView                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:layout_below="@+id/new_address"                            android:gravity="center"                            android:paddingTop="5dp"                            android:text="@string/new_address"                            android:textSize="13sp"                            android:textStyle="bold"/>                    </RelativeLayout>                </LinearLayout>                <EditText                    android:id="@+id/billing_first_name"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="10dp"                    android:background="@drawable/billing_background"                    android:hint="@string/first_name"                    android:inputType="text"                    android:padding="8dp"                    android:textColorHint="#cccccc"                    android:textSize="15sp"                    />                <EditText                    android:id="@+id/billing_last_name"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="10dp"                    android:background="@drawable/billing_background"                    android:hint="@string/last_name"                    android:inputType="text"                    android:padding="8dp"                    android:textColorHint="#cccccc"                    android:textSize="15sp"                    />                <EditText                    android:id="@+id/billing_address_one"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="10dp"                    android:background="@drawable/billing_background"                    android:hint="@string/address_one"                    android:inputType="text"                    android:padding="8dp"                    android:textColorHint="#cccccc"                    android:textSize="15sp"                    />                <EditText                    android:id="@+id/billing_city"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginBottom="8dp"                    android:background="@drawable/billing_background"                    android:hint="@string/city"                    android:inputType="text"                    android:padding="8dp"                    android:textColorHint="#cccccc"                    android:textSize="15sp"                    />                <EditText                    android:id="@+id/billing_postcode"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:background="@drawable/billing_background"                    android:hint="@string/post_code"                    android:layout_marginBottom="8dp"                    android:inputType="number"                    android:padding="8dp"                    android:textColorHint="#cccccc"                    android:textSize="15sp"                    />                <EditText                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:id="@+id/billing_country"                    android:background="@drawable/billing_background"                    android:hint="@string/country"                    android:inputType="text"                    android:padding="8dp"                    android:textColorHint="#cccccc"                    android:textSize="15sp"/>                <android.support.v7.widget.AppCompatCheckBox                    android:id="@+id/checkbox"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginBottom="15dp"                    android:layout_marginTop="10dp"                    android:buttonTint="#F66D63"                    android:checked="false"                    android:text="@string/please_deliver_ro_my_billing_address"                    android:textColor="#54626c"/>            </LinearLayout>        </ScrollView>    </RelativeLayout>    <Button        android:id="@+id/continue_button"        android:layout_width="match_parent"        android:layout_height="40dp"        android:layout_marginBottom="10dp"        android:layout_marginLeft="55dp"        android:layout_marginRight="55dp"        android:background="@drawable/rounded_button"        android:stateListAnimator="@null"        android:text="@string/continues"        android:textColor="#ffffff"        android:textSize="15sp"        android:textStyle="bold"/></LinearLayout>