<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#f8f9fb"
              android:orientation="vertical"
              tools:context="com.fashion.binge.fashiondesign.Cart">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#ffffff">

        <TextView
            android:id="@+id/no_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:hint="@string/no_cart"
            android:padding="8dp"
            android:textColorHint="#d3d3d3"
            android:textSize="14sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:elevation="20dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >

            <EditText
                android:id="@+id/promo_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangular_background"
                android:hint="@string/enter_promo_code"
                android:padding="8dp"
                android:inputType="text"
                android:textColorHint="#d3d3d3"
                android:textSize="14sp"/>

            <FrameLayout
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#54626c">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="+"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/coupon_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/coupon"
                android:textColor="#889096"
                android:textStyle="bold"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/coupon_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@mipmap/coupon"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coupon_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/coupn_value"
                    android:textColor="#54626c"
                    android:textSize="15sp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/sub_total"
                android:textColor="#889096"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/_100"
                    android:textColor="#54626c"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/incl_tax"
                    android:textColor="#5e6b74"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continue_shopping"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="7.5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_transparent"
                android:stateListAnimator="@null"
                android:text="@string/continue_shopping"
                android:textColor="#a1adb5"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/checkout"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="7.5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/checkout"
                android:textColor="#f2f2f2"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
