<?xml version="1.0" encoding="utf-8"?><android.support.design.widget.CoordinatorLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/coordinator_layout"    android:layout_width="match_parent"    android:layout_height="match_parent">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:background="#ffffff"        android:orientation="vertical"        tools:context=".EditProfile"        >        <include layout="@layout/toolbar"/>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:padding="10dp"            >            <TextView                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="3dp"                android:text="@string/first_name"                android:textColor="#54626c"                android:textSize="14sp"                android:textStyle="bold"                />            <EditText                android:id="@+id/first_name"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="15dp"                android:background="@drawable/rectangular_background"                android:inputType="text"                android:textSize="12sp"                android:padding="8dp"                />            <TextView                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="3dp"                android:text="@string/last_name"                android:textColor="#54626c"                android:textSize="14sp"                android:textStyle="bold"                />            <EditText                android:id="@+id/last_name"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="15dp"                android:background="@drawable/rectangular_background"                android:inputType="text"                android:textSize="12sp"                android:padding="8dp"                />            <TextView                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="3dp"                android:text="@string/email"                android:textColor="#54626c"                android:textSize="14sp"                android:textStyle="bold"                />            <EditText                android:id="@+id/email"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="15dp"                android:background="@drawable/rectangular_background"                android:inputType="textEmailAddress"                android:textSize="12sp"                android:padding="8dp"                />            <TextView                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginBottom="3dp"                android:text="@string/phone_no"                android:textColor="#54626c"                android:textSize="14sp"                android:textStyle="bold"                />            <EditText                android:id="@+id/phone_number"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:background="@drawable/rectangular_background"                android:inputType="phone"                android:textSize="12sp"                android:padding="8dp"                />        </LinearLayout>    </LinearLayout></android.support.design.widget.CoordinatorLayout>