<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog_background"
    android:orientation="vertical"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_passwords"
        android:paddingTop="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/provide_email"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/nonrounded_button_transparent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="6dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#d3d3d3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

       >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Cancel"
            android:padding="5dp"
            android:layout_marginBottom="3dp"
            android:textAllCaps="false"
            android:textColor="#0000ff" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#d3d3d3" />

        <TextView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:text="Reset"
            android:textAllCaps="false"
            android:textColor="#ff0000" />
    </LinearLayout>
</LinearLayout>